some bug fixes from Movie Modal, and added hide-scrollbar funcationality

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -160,3 +160,31 @@
     display: none;
   }
 }
+
+/* For WebKit browsers (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
+
+*:hover {
+  scrollbar-color: #555 transparent;
+}
